projects/elements/src/panel/panel.css
:host {
  --background: var(--nve-sys-layer-container-background);
  --color: var(--nve-sys-layer-canvas-color);
  --box-shadow: var(--nve-ref-shadow-300);
  overflow: hidden;
  -webkit-transition: width 240ms ease;
  -webkit-transition: height 240ms ease;
  contain: none;
  position: relative;
}

[internal-host] {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: start;
  height: 100%;
  color: var(--color);
  box-shadow: var(--box-shadow);
  background: var(--background);
}

:host(:not(:state(expanded))) {
  --box-shadow: none;
}

:host(:not([closable]):not(:state(expanded))) [internal-host] {
  width: var(--nve-ref-space-xl) !important;
  height: var(--nve-ref-space-xl) !important;
  background: none;
}

:host(:not([closable]):not(:state(expanded))) {
  pointer-events: none;
}

:host(:not([closable]):not(:state(expanded))) slot {
  display: none;
}

:host(:not([closable]):not(:state(expanded))) nve-icon-button {
  position: initial;
  pointer-events: auto;
}

:host([closable]:not(:state(expanded))) {
  display: none;
}

:host([side='right']) {
  float: right;
}

.header {
  min-height: var(--nve-ref-size-900);
}

.content {
  display: flex;
  flex-direction: column;
  align-items: start;
  flex-grow: 1;
}

nve-icon-button {
  position: absolute;
  top: var(--nve-ref-size-100);
  right: var(--nve-ref-size-100);
  z-index: 99;
}

